--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Add Google services dependency
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -5,8 +16,6 @@ allprojects {
     }
 
 }
-
-
 
 rootProject.buildDir = "../build"
 subprojects {
