--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^6.1.2
   cupertino_icons: ^1.0.8
   google_sign_in: ^6.1.0
+  font_awesome_flutter: ^10.0.0
 
 dev_dependencies:
   flutter_test:
